tests/invalid/vararg_not_last.lang
func variadic(args: ..i32, a: i32) {

}
